--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
-
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
     <uses-permission android:name="android.permission.ACCESS_MEDIA_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
@@ -26,9 +26,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TTS"
         tools:targetApi="31">
-        <activity
-            android:name=".ui.TebakKataActivity"
-            android:exported="false" />
         <activity
             android:name=".ui.trial.TestActivity"
             android:exported="false" />
@@ -54,6 +51,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-5609246517650629~7589046483"/>
     </application>
 
 </manifest>
