--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,10 @@
             android:exported="false" />
         <activity
             android:name=".ui.BarcodeActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation"
+            />
         <activity
             android:name=".ui.RegisterActivity"
             android:exported="false" />
