--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,10 @@
             android:exported="false" />
         <activity
             android:name=".ui.BarcodeActivity"
-            android:exported="false"
-            android:screenOrientation="fullSensor"
-            tools:replace="screenOrientation"
-            />
+            android:exported="false"/>
+<!--            android:screenOrientation="fullSensor"-->
+<!--            tools:replace="screenOrientation"-->
+<!--            />-->
         <activity
             android:name=".ui.RegisterActivity"
             android:exported="false" />
@@ -52,7 +52,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
-            tools:replace="screenOrientation">
+            tools:replace="screenOrientation"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
