--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcer"
@@ -29,9 +29,6 @@
         android:theme="@style/Theme.TTS"
         tools:targetApi="31">
         <activity
-            android:name=".ui.EncoderActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.BarcodeActivity"
             android:exported="false"
             android:screenOrientation="portrait"
@@ -39,12 +36,6 @@
             tools:ignore="LockedOrientationActivity"
             tools:replace="screenOrientation"
             />
-<!--            android:screenOrientation="fullSensor"-->
-<!--            tools:replace="screenOrientation"-->
-<!--            />-->
-        <activity
-            android:name=".ui.RegisterActivity"
-            android:exported="false" />
         <activity
             android:name=".ui.BoardActivity"
             android:exported="false"
