--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcer"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcer_round"
@@ -31,6 +32,7 @@
         <activity
             android:name=".ui.BarcodeActivity"
             android:exported="false"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
@@ -39,6 +41,7 @@
         <activity
             android:name=".ui.BoardActivity"
             android:exported="false"
+            android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
             tools:replace="screenOrientation"
@@ -55,6 +58,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
+            android:hardwareAccelerated="true"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
             tools:replace="screenOrientation"
