--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,33 +36,29 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
-            tools:replace="screenOrientation"
-            />
+            tools:replace="screenOrientation" />
         <activity
             android:name=".ui.BoardActivity"
             android:exported="false"
             android:hardwareAccelerated="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"
-            tools:replace="screenOrientation"
-            />
+            tools:replace="screenOrientation" />
         <activity
             android:name=".ui.QuestionActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
-            tools:replace="screenOrientation"
-            />
+            tools:replace="screenOrientation" />
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:hardwareAccelerated="true"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan|adjustResize"
             tools:ignore="LockedOrientationActivity"
-            tools:replace="screenOrientation"
-            >
+            tools:replace="screenOrientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
